[package]
name = "derive-attribute-utils"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A utility crate for derive-attribute"

[features]
syn_1 = ["syn_v1"]
syn_2 = ["syn_v2"]

[dependencies]
thiserror = "1.0.40"
syn_v1 = { package = "syn", version = "1", features = ["full"], optional = true }
syn_v2 = { package = "syn", version = "2", features = ["full"], optional = true }
proc-macro2 = "1.0.56"

[package.metadata.docs.rs]
all-features = true
